[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/demos/equipment_effects_demo.gd" id="1"]

[node name="EquipmentEffectsDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -400.0
offset_right = 450.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "EQUIPMENT EFFECTS SYSTEM DEMO"
horizontal_alignment = 1

[node name="SystemLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Tests: Equip, attack bonus, defense reduction, unequip"
horizontal_alignment = 1

[node name="TestButtons" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="InitPlayersButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Initialize Players & Equipment Cards"

[node name="EquipAttackerButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Equip Card for Attacker (damage)"

[node name="EquipDefenderButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Equip Card for Defender (defense)"

[node name="AttackButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Perform Attack (test bonuses)"

[node name="UnequipButton" type="Button" parent="VBoxContainer/TestButtons"]
custom_minimum_size = Vector2(700, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Unequip Attacker's First Card"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player Status:
(Will update after actions)"

[node name="CombatLogLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Combat Log:
(Will update after actions)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Menu"
